--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ logging.level.java = info
 server.port=8804
 
 spring.application.name=PublicServiceCenter
-eureka.client.serviceUrl.defaultZone=http://localhost:8801/eureka/
+eureka.client.serviceUrl.defaultZone=http://139.224.194.154:8801/eureka/
 
