--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>common</artifactId>
             <version>0.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.originaldreams</groupId>
+            <artifactId>smssdk</artifactId>
+            <version>2.6.3</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
