--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,1 @@
-mybatis.type-aliases-package=com.originaldreams.publicservicecenter
-
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/my_user?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username = root
-spring.datasource.password = 123456
-
-logging.file = /Users/yangkaile/logs/PublicServiceCenter.log
-logging.level.java = info
-
-server.port=8804
-
-spring.application.name=PublicServiceCenter
-eureka.client.serviceUrl.defaultZone=http://139.224.194.154:8801/eureka/
-
+spring.profiles.active=dev
